--- a/pages/17878.html
+++ b/pages/17878.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -307,7 +307,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide'>
+      <div class='rightHandSide'>
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
@@ -501,8 +501,8 @@ margin-left: 0em;
 
 <h3 id='differential_gradedcommutative_algebra'>Differential graded-commutative algebra</h3>
 
-<p>A <em>differential graded-commutative algebra</em> (also <em>DGCA</em> or <em>dgca</em>, for short) is a <a class='existingWikiWord' href='/nlab/show/differential+graded+algebra'>differential-graded algebra</a> which is <a class='existingWikiWord' href='/nlab/show/supercommutative+algebra'>supercommutative</a> in that for <math class='maruku-mathml' display='inline' id='mathml_719e0a62cfff0c3028ab64de389525c61c6d007b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>v</mi><mo>,</mo><mi>w</mi></mrow><annotation encoding='application/x-tex'>v,w</annotation></semantics></math> any two elements in homogeneous degree <math class='maruku-mathml' display='inline' id='mathml_719e0a62cfff0c3028ab64de389525c61c6d007b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>deg</mi><mo stretchy='false'>(</mo><mi>v</mi><mo stretchy='false'>)</mo><mo>,</mo><mi>deg</mi><mo stretchy='false'>(</mo><mi>w</mi><mo stretchy='false'>)</mo><mo>∈</mo><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>deg(v), deg(w) \in \mathbb{Z}</annotation></semantics></math>, respectively, then the product in the algebra satisfies</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_719e0a62cfff0c3028ab64de389525c61c6d007b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>v</mi><mi>w</mi><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn><msup><mo stretchy='false'>)</mo> <mrow><mi>deg</mi><mo stretchy='false'>(</mo><mi>v</mi><mo stretchy='false'>)</mo><mi>deg</mi><mo stretchy='false'>(</mo><mi>w</mi><mo stretchy='false'>)</mo></mrow></msup><mi>w</mi><mi>v</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>A <em>differential graded-commutative algebra</em> (also <em>DGCA</em> or <em>dgca</em>, for short) is a <a class='existingWikiWord' href='/nlab/show/differential+graded+algebra'>differential-graded algebra</a> which is <a class='existingWikiWord' href='/nlab/show/supercommutative+algebra'>supercommutative</a> in that for <math class='maruku-mathml' display='inline' id='mathml_5cc6198fc77bcf7eb77ae8cee00a894b3f66c505_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>v</mi><mo>,</mo><mi>w</mi></mrow><annotation encoding='application/x-tex'>v,w</annotation></semantics></math> any two elements in homogeneous degree <math class='maruku-mathml' display='inline' id='mathml_5cc6198fc77bcf7eb77ae8cee00a894b3f66c505_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>deg</mi><mo stretchy='false'>(</mo><mi>v</mi><mo stretchy='false'>)</mo><mo>,</mo><mi>deg</mi><mo stretchy='false'>(</mo><mi>w</mi><mo stretchy='false'>)</mo><mo>∈</mo><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>deg(v), deg(w) \in \mathbb{Z}</annotation></semantics></math>, respectively, then the product in the algebra satisfies</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_5cc6198fc77bcf7eb77ae8cee00a894b3f66c505_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>v</mi><mi>w</mi><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn><msup><mo stretchy='false'>)</mo> <mrow><mi>deg</mi><mo stretchy='false'>(</mo><mi>v</mi><mo stretchy='false'>)</mo><mi>deg</mi><mo stretchy='false'>(</mo><mi>w</mi><mo stretchy='false'>)</mo></mrow></msup><mi>w</mi><mi>v</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   v w \;=\; (-1)^{deg(v) deg(w)} w v 
   \,.
 
@@ -511,25 +511,25 @@ margin-left: 0em;
 
 <h3 id='DifferentialGradedCommutativeSuperalgebra'>Differential graded-commutative superalgebra</h3>
 
-<p>More generally, a <em>differential graded commutative superalgebra</em> <math class='maruku-mathml' display='inline' id='mathml_719e0a62cfff0c3028ab64de389525c61c6d007b_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>A</mi><mo>,</mo><mi>d</mi><mo stretchy='false'>)</mo><mo>∈</mo><mi>dgcSAlg</mi></mrow><annotation encoding='application/x-tex'>(A,d) \in dgcSAlg</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/commutative+monoid'>commutative monoid</a> in the <a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+category'>symmetric monoidal</a> <a class='existingWikiWord' href='/nlab/show/category+of+chain+complexes'>category of chain complexes</a> of <a class='existingWikiWord' href='/nlab/show/super+vector+space'>super vector spaces</a>.</p>
+<p>More generally, a <em>differential graded commutative superalgebra</em> <math class='maruku-mathml' display='inline' id='mathml_5cc6198fc77bcf7eb77ae8cee00a894b3f66c505_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>A</mi><mo>,</mo><mi>d</mi><mo stretchy='false'>)</mo><mo>∈</mo><mi>dgcSAlg</mi></mrow><annotation encoding='application/x-tex'>(A,d) \in dgcSAlg</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/commutative+monoid'>commutative monoid</a> in the <a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+category'>symmetric monoidal</a> <a class='existingWikiWord' href='/nlab/show/category+of+chain+complexes'>category of chain complexes</a> of <a class='existingWikiWord' href='/nlab/show/super+vector+space'>super vector spaces</a>.</p>
 
-<p>This means that <math class='maruku-mathml' display='inline' id='mathml_719e0a62cfff0c3028ab64de389525c61c6d007b_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>A</mi><mo>,</mo><mi>d</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(A,d)</annotation></semantics></math> has a <math class='maruku-mathml' display='inline' id='mathml_719e0a62cfff0c3028ab64de389525c61c6d007b_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi><mo>×</mo><mi>ℤ</mi><mo stretchy='false'>/</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>\mathbb{Z} \times \mathbb{Z}/2</annotation></semantics></math>-bigrading and that</p>
+<p>This means that <math class='maruku-mathml' display='inline' id='mathml_5cc6198fc77bcf7eb77ae8cee00a894b3f66c505_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>A</mi><mo>,</mo><mi>d</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(A,d)</annotation></semantics></math> has a <math class='maruku-mathml' display='inline' id='mathml_5cc6198fc77bcf7eb77ae8cee00a894b3f66c505_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi><mo>×</mo><mi>ℤ</mi><mo stretchy='false'>/</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>\mathbb{Z} \times \mathbb{Z}/2</annotation></semantics></math>-bigrading and that</p>
 
 <ol>
 <li>
-<p>for <math class='maruku-mathml' display='inline' id='mathml_719e0a62cfff0c3028ab64de389525c61c6d007b_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mo>,</mo><mi>b</mi><mo>∈</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>a,b \in A</annotation></semantics></math> two elements of homogeous degree <math class='maruku-mathml' display='inline' id='mathml_719e0a62cfff0c3028ab64de389525c61c6d007b_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><msub><mi>n</mi> <mi>a</mi></msub><mo>,</mo><msub><mi>σ</mi> <mi>a</mi></msub><mo stretchy='false'>)</mo><mo>,</mo><mo stretchy='false'>(</mo><msub><mi>n</mi> <mi>b</mi></msub><mo>,</mo><msub><mi>σ</mi> <mi>b</mi></msub><mo stretchy='false'>)</mo><mo>∈</mo><mi>ℤ</mi><mo>×</mo><mi>ℤ</mi><mo stretchy='false'>/</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>(n_a, \sigma_a), (n_b, \sigma_b) \in \mathbb{Z} \times \mathbb{Z}/2</annotation></semantics></math>, respectively, then</p>
+<p>for <math class='maruku-mathml' display='inline' id='mathml_5cc6198fc77bcf7eb77ae8cee00a894b3f66c505_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mo>,</mo><mi>b</mi><mo>∈</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>a,b \in A</annotation></semantics></math> two elements of homogeous degree <math class='maruku-mathml' display='inline' id='mathml_5cc6198fc77bcf7eb77ae8cee00a894b3f66c505_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><msub><mi>n</mi> <mi>a</mi></msub><mo>,</mo><msub><mi>σ</mi> <mi>a</mi></msub><mo stretchy='false'>)</mo><mo>,</mo><mo stretchy='false'>(</mo><msub><mi>n</mi> <mi>b</mi></msub><mo>,</mo><msub><mi>σ</mi> <mi>b</mi></msub><mo stretchy='false'>)</mo><mo>∈</mo><mi>ℤ</mi><mo>×</mo><mi>ℤ</mi><mo stretchy='false'>/</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>(n_a, \sigma_a), (n_b, \sigma_b) \in \mathbb{Z} \times \mathbb{Z}/2</annotation></semantics></math>, respectively, then</p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_719e0a62cfff0c3028ab64de389525c61c6d007b_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mi>b</mi><mo>=</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn><msup><mo stretchy='false'>)</mo> <mrow><msub><mi>n</mi> <mi>a</mi></msub><msub><mi>n</mi> <mi>b</mi></msub></mrow></msup><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn><msup><mo stretchy='false'>)</mo> <mrow><msub><mi>σ</mi> <mi>a</mi></msub><msub><mi>σ</mi> <mi>b</mi></msub></mrow></msup><mspace width='thinmathspace'></mspace><mi>b</mi><mi>a</mi></mrow><annotation encoding='application/x-tex'>a b = (-1)^{n_a n_b} (-1)^{\sigma_a \sigma_b} \, b a</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_5cc6198fc77bcf7eb77ae8cee00a894b3f66c505_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>a</mi><mi>b</mi><mo>=</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn><msup><mo stretchy='false'>)</mo> <mrow><msub><mi>n</mi> <mi>a</mi></msub><msub><mi>n</mi> <mi>b</mi></msub></mrow></msup><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn><msup><mo stretchy='false'>)</mo> <mrow><msub><mi>σ</mi> <mi>a</mi></msub><msub><mi>σ</mi> <mi>b</mi></msub></mrow></msup><mspace width='thinmathspace'></mspace><mi>b</mi><mi>a</mi></mrow><annotation encoding='application/x-tex'>a b = (-1)^{n_a n_b} (-1)^{\sigma_a \sigma_b} \, b a</annotation></semantics></math></p>
 </li>
 
 <li>
-<p><math class='maruku-mathml' display='inline' id='mathml_719e0a62cfff0c3028ab64de389525c61c6d007b_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><mo stretchy='false'>(</mo><mi>a</mi><mi>b</mi><mo stretchy='false'>)</mo><mo>=</mo><mo stretchy='false'>(</mo><mi>d</mi><mi>a</mi><mo stretchy='false'>)</mo><mi>b</mi><mo>+</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn><msup><mo stretchy='false'>)</mo> <mrow><msub><mi>n</mi> <mn>1</mn></msub></mrow></msup><mi>a</mi><mo stretchy='false'>(</mo><mi>d</mi><mi>b</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>d (a b) = (d a) b + (-1)^{n_1} a (d b)</annotation></semantics></math>.</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_5cc6198fc77bcf7eb77ae8cee00a894b3f66c505_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><mo stretchy='false'>(</mo><mi>a</mi><mi>b</mi><mo stretchy='false'>)</mo><mo>=</mo><mo stretchy='false'>(</mo><mi>d</mi><mi>a</mi><mo stretchy='false'>)</mo><mi>b</mi><mo>+</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn><msup><mo stretchy='false'>)</mo> <mrow><msub><mi>n</mi> <mn>1</mn></msub></mrow></msup><mi>a</mi><mo stretchy='false'>(</mo><mi>d</mi><mi>b</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>d (a b) = (d a) b + (-1)^{n_1} a (d b)</annotation></semantics></math>.</p>
 </li>
 </ol>
 
 <p>See also at <em><a class='existingWikiWord' href='/nlab/show/signs+in+supergeometry'>signs in supergeometry</a></em>.</p>
 
-<p>In bidegree <math class='maruku-mathml' display='inline' id='mathml_719e0a62cfff0c3028ab64de389525c61c6d007b_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>0</mn><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(0,-)</annotation></semantics></math> this is a <em><a class='existingWikiWord' href='/nlab/show/super+algebra'>commutative superalgebra</a></em>.</p>
+<p>In bidegree <math class='maruku-mathml' display='inline' id='mathml_5cc6198fc77bcf7eb77ae8cee00a894b3f66c505_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>0</mn><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(0,-)</annotation></semantics></math> this is a <em><a class='existingWikiWord' href='/nlab/show/super+algebra'>commutative superalgebra</a></em>.</p>
 
 <h2 id='examples'>Examples</h2>
 
@@ -568,6 +568,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/model+structure+on+dg-algebras'>model structure on differential graded-commutative algebras</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+differential+graded-commutative+superalgebras'>model structure on differential graded-commutative superalgebras</a></p>
 </li>
 
 <li>
@@ -613,14 +617,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on July 23, 2018 at 15:49:04.
+  Last revised on July 25, 2018 at 14:54:40.
   See the <a href="https://ncatlab.org/nlab/history/differential graded-commutative algebra" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/differential+graded-commutative+algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/differential+graded-commutative+algebra/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/differential+graded-commutative+algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/differential+graded-commutative+algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/differential+graded-commutative+algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/differential+graded-commutative+algebra/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/differential+graded-commutative+algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/differential+graded-commutative+algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/differential graded-commutative algebra/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
