--- a/pages/19541.html
+++ b/pages/19541.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      model structure on differential graded-commutative superalgebras in nLab
+      model structure on chain complexes of super vector spaces in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      model structure on differential graded-commutative superalgebras
+      model structure on chain complexes of super vector spaces
   </h1>
 
 
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8766/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8767/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -716,7 +716,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h2 id='presentation_of_categories'>Presentation of <math class='maruku-mathml' display='inline' id='mathml_02b1b6e773a2763a76c0a6bc121c9a3a15f74493_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h2>
+<h2 id='presentation_of_categories'>Presentation of <math class='maruku-mathml' display='inline' id='mathml_2adf61c0e2d5f9f91888fe8e713f7770bf61ac21_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h2>
 
 <ul>
 <li>
@@ -742,7 +742,7 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Cisinski+model+structure'>Cisinski model structure</a></li>
 </ul>
 
-<h3 id='for_groupoids'>for <math class='maruku-mathml' display='inline' id='mathml_02b1b6e773a2763a76c0a6bc121c9a3a15f74493_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoids</h3>
+<h3 id='for_groupoids'>for <math class='maruku-mathml' display='inline' id='mathml_2adf61c0e2d5f9f91888fe8e713f7770bf61ac21_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groupoids</h3>
 
 <p><a class='existingWikiWord' href='/nlab/show/model+structure+for+infinity-groupoids'>for ∞-groupoids</a></p>
 
@@ -794,7 +794,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_groupoids_2'>for <math class='maruku-mathml' display='inline' id='mathml_02b1b6e773a2763a76c0a6bc121c9a3a15f74493_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-groupoids</h3>
+<h3 id='for_groupoids_2'>for <math class='maruku-mathml' display='inline' id='mathml_2adf61c0e2d5f9f91888fe8e713f7770bf61ac21_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-groupoids</h3>
 
 <ul>
 <li>
@@ -806,7 +806,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_groups'>for <math class='maruku-mathml' display='inline' id='mathml_02b1b6e773a2763a76c0a6bc121c9a3a15f74493_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groups</h3>
+<h3 id='for_groups'>for <math class='maruku-mathml' display='inline' id='mathml_2adf61c0e2d5f9f91888fe8e713f7770bf61ac21_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-groups</h3>
 
 <ul>
 <li>
@@ -818,7 +818,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_algebras'>for <math class='maruku-mathml' display='inline' id='mathml_02b1b6e773a2763a76c0a6bc121c9a3a15f74493_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-algebras</h3>
+<h3 id='for_algebras'>for <math class='maruku-mathml' display='inline' id='mathml_2adf61c0e2d5f9f91888fe8e713f7770bf61ac21_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-algebras</h3>
 
 <h4 id='general'>general</h4>
 
@@ -888,7 +888,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_categories'>for <math class='maruku-mathml' display='inline' id='mathml_02b1b6e773a2763a76c0a6bc121c9a3a15f74493_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h3>
+<h3 id='for_categories'>for <math class='maruku-mathml' display='inline' id='mathml_2adf61c0e2d5f9f91888fe8e713f7770bf61ac21_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h3>
 
 <ul>
 <li>
@@ -912,13 +912,13 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_stable_categories'>for stable <math class='maruku-mathml' display='inline' id='mathml_02b1b6e773a2763a76c0a6bc121c9a3a15f74493_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h3>
+<h3 id='for_stable_categories'>for stable <math class='maruku-mathml' display='inline' id='mathml_2adf61c0e2d5f9f91888fe8e713f7770bf61ac21_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</h3>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/model+structure+on+dg-categories'>on dg-categories</a></li>
 </ul>
 
-<h3 id='for_operads'>for <math class='maruku-mathml' display='inline' id='mathml_02b1b6e773a2763a76c0a6bc121c9a3a15f74493_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-operads</h3>
+<h3 id='for_operads'>for <math class='maruku-mathml' display='inline' id='mathml_2adf61c0e2d5f9f91888fe8e713f7770bf61ac21_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-operads</h3>
 
 <ul>
 <li>
@@ -932,7 +932,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_categories_2'>for <math class='maruku-mathml' display='inline' id='mathml_02b1b6e773a2763a76c0a6bc121c9a3a15f74493_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>n</mi><mo>,</mo><mi>r</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(n,r)</annotation></semantics></math>-categories</h3>
+<h3 id='for_categories_2'>for <math class='maruku-mathml' display='inline' id='mathml_2adf61c0e2d5f9f91888fe8e713f7770bf61ac21_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>n</mi><mo>,</mo><mi>r</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(n,r)</annotation></semantics></math>-categories</h3>
 
 <ul>
 <li>
@@ -956,7 +956,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='for_sheaves__stacks'>for <math class='maruku-mathml' display='inline' id='mathml_02b1b6e773a2763a76c0a6bc121c9a3a15f74493_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-sheaves / <math class='maruku-mathml' display='inline' id='mathml_02b1b6e773a2763a76c0a6bc121c9a3a15f74493_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-stacks</h3>
+<h3 id='for_sheaves__stacks'>for <math class='maruku-mathml' display='inline' id='mathml_2adf61c0e2d5f9f91888fe8e713f7770bf61ac21_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-sheaves / <math class='maruku-mathml' display='inline' id='mathml_2adf61c0e2d5f9f91888fe8e713f7770bf61ac21_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-stacks</h3>
 
 <ul>
 <li>
@@ -993,16 +993,20 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/category'>category</a> of <a class='existingWikiWord' href='/nlab/show/differential+graded-commutative+algebra'>differential graded-commutative superalgebras</a> over a <a class='existingWikiWord' href='/nlab/show/field'>field</a> of <a class='existingWikiWord' href='/nlab/show/characteristic+zero'>characteristic zero</a> carries a <em>projective</em> <a class='existingWikiWord' href='/nlab/show/model+category'>model category</a> <a class='existingWikiWord' href='/nlab/show/structure'>structure</a> whose <a class='existingWikiWord' href='/nlab/show/weak+equivalence'>weak equivalences</a> are the underlying <a class='existingWikiWord' href='/nlab/show/quasi-isomorphism'>quasi-isomorphisms</a> and whose <a class='existingWikiWord' href='/nlab/show/fibration'>fibrations</a> are the degreewise <a class='existingWikiWord' href='/nlab/show/surjection'>surjections</a> (all either in unbounded degree, in non-negative degree or in non-positive degree).</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/category'>category</a> of <a class='existingWikiWord' href='/nlab/show/chain+complex'>chain complexes</a> of <a class='existingWikiWord' href='/nlab/show/super+vector+space'>super vector spaces</a> over a <a class='existingWikiWord' href='/nlab/show/field'>field</a> of <a class='existingWikiWord' href='/nlab/show/characteristic+zero'>characteristic zero</a> carries a <em>projective</em> <a class='existingWikiWord' href='/nlab/show/model+category'>model category</a> <a class='existingWikiWord' href='/nlab/show/structure'>structure</a> whose <a class='existingWikiWord' href='/nlab/show/weak+equivalence'>weak equivalences</a> are the underlying <a class='existingWikiWord' href='/nlab/show/quasi-isomorphism'>quasi-isomorphisms</a> and whose <a class='existingWikiWord' href='/nlab/show/fibration'>fibrations</a> are the degreewise <a class='existingWikiWord' href='/nlab/show/surjection'>surjections</a> (all either in unbounded degree, in non-negative degree or in non-positive degree).</p>
 
-<p>This is the <a class='existingWikiWord' href='/nlab/show/transferred+model+structure'>transferred model structure</a> of the projective <a class='existingWikiWord' href='/nlab/show/model+structure+on+chain+complexes+of+super+vector+spaces'>model structure on chain complexes of super vector spaces</a>, transferred along the <a class='existingWikiWord' href='/nlab/show/forgetful+functor'>forgetful functor</a> to underlying chain complexes.</p>
-
-<p>The model structure is hence the direct generalization of the projective <a class='existingWikiWord' href='/nlab/show/model+structure+on+dg-algebras'>model structure on differential graded-commutative algebras</a>, to which it reduces on the objects concentrated in even super-degree.</p>
+<p>The model structure is hence the direct generalization of the projective <a class='existingWikiWord' href='/nlab/show/model+structure+on+chain+complexes'>model structure on chain complexes</a> of plain <a class='existingWikiWord' href='/nlab/show/vector+space'>vector spaces</a>, to which it reduces on the objects concentrated in even super-degree.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/super+L-infinity+algebra'>super L-infinity algebra</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+differential+graded-commutative+superalgebras'>model structure on differential graded-commutative superalgebras</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/super+L-infinity+algebra'>super L-infinity algebra</a></p>
+</li>
 </ul>
 
 <h2 id='references'>References</h2>
@@ -1010,43 +1014,31 @@ margin-left: 0em;
 <p>A unified treatmeant generalizing to arbitary super <a class='existingWikiWord' href='/nlab/show/Fermat+theory'>Fermat theories</a> is in</p>
 
 <ul>
-<li id='CarchediRoytenberg12'><a class='existingWikiWord' href='/nlab/show/David+Carchedi'>David Carchedi</a>, <a class='existingWikiWord' href='/nlab/show/Dmitry+Roytenberg'>Dmitry Roytenberg</a>, theorem 1, theorem 6.5 of <em>Homological Algebra for Superalgebras of Differentiable Functions</em> (<a href='https://arxiv.org/abs/1212.3745'>arXiv:1212.3745</a>)</li>
+<li id='CarchediRoytenberg12'><a class='existingWikiWord' href='/nlab/show/David+Carchedi'>David Carchedi</a>, <a class='existingWikiWord' href='/nlab/show/Dmitry+Roytenberg'>Dmitry Roytenberg</a>, section 6.1 of of <em>Homological Algebra for Superalgebras of Differentiable Functions</em> (<a href='https://arxiv.org/abs/1212.3745'>arXiv:1212.3745</a>)</li>
 </ul>
 
 <p>
-</p>
-
-<p>
- 
-</p>
-
-<p>
- 
-</p>
-
-<p>
- 
 </p>
 </div>
 
 <div class="revisedby">
   <p>
-  Created on July 25, 2018 at 15:25:24.
-  See the <a href="https://ncatlab.org/nlab/history/model structure on differential graded-commutative superalgebras" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on July 25, 2018 at 15:24:40.
+  See the <a href="https://ncatlab.org/nlab/history/model structure on chain complexes of super vector spaces" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/model+structure+on+differential+graded-commutative+superalgebras" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  | <a href="https://ncatlab.org/nlab/show/model structure on differential graded-commutative superalgebras/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/model+structure+on+chain+complexes+of+super+vector+spaces" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/model structure on chain complexes of super vector spaces/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/model+structure+on+differential+graded-commutative+superalgebras" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/model+structure+on+chain+complexes+of+super+vector+spaces" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/model+structure+on+differential+graded-commutative+superalgebras" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/model+structure+on+chain+complexes+of+super+vector+spaces" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/model+structure+on+differential+graded-commutative+superalgebras" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/model+structure+on+chain+complexes+of+super+vector+spaces" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
